--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,17 +6,20 @@ main:
   - title: "News"
     url: "/#-news"
 
+  - title: "Experiences"
+     url: "/#-experiences"
+ 
+   - title: "Educations"
+     url: "/#-educations"
+
   - title: "Publications"
     url: "/#-publications"
+
+  - title: "Academic Services"
+    url: "/#-academic-services"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Educations"
-    url: "/#-educations"
-
   - title: "Invited Talks"
     url: "/#-invited-talks"
-
-  - title: "Internships"
-    url: "/#-internships"
